<resources>
    <string name="app_name">ninjacat</string>

    <string name="loginPlaceholder">Введите логин…</string>
    <string name="passwordPlaceholder">Введите пароль…</string>
    <string name="appTitle">NINJACAT</string>
    <string name="appSign">Powered by iamnzrv</string>
    <string name="regActionBtn">Зарегистрироваться</string>
    <string name="loginActionBtn"><u>Войти</u></string>
    <string name="createAccountLink"><u>Создать аккаунт</u></string>
    <string name="alreadyHaveAnAccount">Уже есть аккаунт?</string>
    <string name="invalid_login_characters">Логин может содержать только символы \'a–z\', \'0–9\', \'_\'</string>
    <string name="invalid_login_length">Длина логина должна быть от 6 до 40 символов</string>
    <string name="invalid_password_characters">Пароль должен содержать по крайней мере 1 латинскую букву и 1 цифру</string>
    <string name="invalid_password_length">Длина пароля должна быть от 6 до 30 символов</string>
    <string name="failed_login">Не удалось выполнить вход</string>
    <string name="login_too_long">Логин слишком длинный</string>
    <string name="login_too_short">Логин слишком короткий</string>
    <string name="password_too_long">Логин слишком длинный</string>
    <string name="password_too_short">Логин слишком короткий</string>
    <string name="bad_request">Не удалось завершить запрос с этими данными</string>
    <string name="bad_password">Неверный пароль</string>
    <string name="user_not_found">Не удалось найти пользователя</string>
    <string name="user_exists">Пользователь с таким логином уже существует</string>
    <string name="failed_registration">Не  удалось зарегистрировать пользователя</string>
    <string name="failed_get_products">Не удалось получить товары</string>
    <string name="products_not_found">К сожалению, пока нет ни одного товара</string>
    <string name="quit_account">Выйти из аккаунта</string>
    <string name="productNamePlaceholder">Введите название…</string>
    <string name="productQuantityPlaceholder">Введите количество…</string>
    <string name="productAmountPlaceholder">Введите цену…</string>
    <string name="addProductBtn">Добавить товар</string>
    <string name="editProductBtn">Изменить товар</string>
    <string name="product_name_too_long">Имя товара слишком длинное</string>
    <string name="product_name_too_short">Имя товара слишком короткое</string>
    <string name="product_name_invalid">Имя товара указано неверно</string>
    <string name="product_quantity_invalid">Указано неверное количество товара</string>
    <string name="product_amount_invalid">Указана неверная цена</string>
    <string name="product_exists">Товар с таким именем уже существует</string>
    <string name="failed_add_product">Не удалось добавить товар</string>
    <string name="no_product_found">Такого товара не найдено</string>
    <string name="failed_edit_product">Не удалось изменить товар</string>
    <string name="delete_product">Удалить товар</string>
    <string name="title_products">Товары</string>
    <string name="title_sales">Продажи</string>
    <string name="failed_get_sales">Продажи не найдены</string>
    <string name="sales_not_found">Продажи не найдены</string>
    <string name="sale_exists">Такая продажа уже существует</string>
    <string name="failed_add_sale">Не удалось добавить продажу</string>
    <string name="no_sale_found">Продажа не найдена</string>
    <string name="failed_edit_sale">Не удалось изменить продажу</string>
    <string name="title_charges">Расходы</string>
    <string name="editChargeBtn">Изменить расход</string>
    <string name="delete_charge">Удалить расход</string>
    <string name="charges_not_found">Расходы не найдены</string>
    <string name="failed_get_charges">Не удалось получить расходы</string>
    <string name="charge_exists">Такой расход уже существует</string>
    <string name="failed_add_charge">Не удалось добавить расход</string>
    <string name="no_charge_found">Такого расхода не найдено</string>
    <string name="failed_edit_charge">Не удалось изменить расход</string>
    <string name="charge_name_too_long">Наименование расхода слишком длинное</string>
    <string name="charge_name_too_short">Наименование расхода слишком короткое</string>
    <string name="charge_amount_invalid">Указано неверное количество предметов расхода</string>
    <string name="expenses_not_found">Статьи расходов не найдены</string>
    <string name="failed_get_expenses">Не удалось получить статьи расходов</string>
    <string name="expense_not_found">Такого расхода не найдено</string>
    <string name="failed_delete_expense">Не удалось удалить расход</string>
    <string name="warehouse_no_content">Не удалось добавить продажу, поскольку на складе не осталось такого товара</string>
    <string name="bad_login_data">Неверно указан логин или пароль</string>
</resources>
