<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.auth.login.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginLoginTxtLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAppSign">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginLoginTxtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginPlaceholder" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordTxtLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLoginTxtLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordTxtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordPlaceholder"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/loginAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appTitle"
        android:textColor="@color/cardview_dark_background"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/loginAppSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appSign"
        app:layout_constraintEnd_toEndOf="@+id/loginAppTitle"
        app:layout_constraintStart_toStartOf="@+id/loginAppTitle"
        app:layout_constraintTop_toBottomOf="@+id/loginAppTitle" />

    <Button
        android:id="@+id/loginLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/cardview_dark_background"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/loginActionBtn"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/loginPasswordTxtLayout"
        app:layout_constraintStart_toStartOf="@+id/loginPasswordTxtLayout"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordTxtLayout" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/loginLoading"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/loader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regLink" />

    <TextView
        android:id="@+id/regLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/createAccountLink"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="@+id/loginLoginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginLoginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginLoginBtn" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ninjacat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>