<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.admin.charge.AdminEditChargeFragment">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/editChargeLoading"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/loader"
        app:layout_constraintEnd_toEndOf="@+id/editChargeBtn"
        app:layout_constraintStart_toStartOf="@+id/editChargeBtn"
        app:layout_constraintTop_toBottomOf="@+id/editChargeBtn" />

    <Button
        android:id="@+id/editChargeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/cardview_dark_background"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/editChargeBtn"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editChargeAmountTxtLayout" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.App.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editChargeNameTxtLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editChargeDesc"
        app:layout_constraintTop_toBottomOf="@+id/editChargeNameDesc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editChargeNameTxtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:hint="@string/productNamePlaceholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editChargeAmountTxtLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editChargeDesc"
        app:layout_constraintTop_toBottomOf="@+id/editChargeNameDesc4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editChargeAmountTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/productAmountPlaceholder"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/editChargeDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="Отредактируйте данные о расходе:"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/editChargeNameDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Предмет расхода:"
        app:layout_constraintStart_toStartOf="@+id/editChargeDesc"
        app:layout_constraintTop_toBottomOf="@+id/editChargeDesc" />

    <TextView
        android:id="@+id/editChargeNameDesc4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Потраченная сумма:"
        app:layout_constraintStart_toStartOf="@+id/editChargeNameTxtLayout"
        app:layout_constraintTop_toBottomOf="@+id/editChargeNameTxtLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>